--- a/deps/style.html
+++ b/deps/style.html
@@ -38,6 +38,13 @@ nav#TOC ul {
 p:not(.title, .author, .date) {
     text-align: justify;
 }
+div.keywords .k-title {
+    font-weight: bold;
+    margin-right: .13rem;
+}
+div.keywords .k-words {
+    /* font-style: italic; */
+}
 blockquote p {
     text-align: left;
     font-style: italic;
