--- a/deps/after-body.html
+++ b/deps/after-body.html
@@ -30,7 +30,7 @@
 <style>
     @media only screen and (max-width: 1000px) {
         .js-toc,
-        #tocChap {
+        #tocChap ul {
             display: none !important;
         }
     }
