--- a/deps/style.html
+++ b/deps/style.html
@@ -5,10 +5,8 @@ body {
     line-height: 1.38;
     max-width: 38em;
 }
-h1 {
-    text-align: center;
-}
 h1.title {
+    text-align: center;
     margin-top: 0;
     margin-bottom: 0.2em;
     font-size: 2.2rem;
@@ -77,5 +75,5 @@ table.linguistic-example td {
     min-width: 200px;
 }
 </style>
-<!-- <link rel="stylesheet" href="../deps/custom.css"> -->
+<link rel="stylesheet" href="custom.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.11.1/tocbot.css">
