deploy: 594f5ded59010e941a17da9ac24b318a4d1968ff

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             })
 
             function get_files() {
-                return 'index.html__01-intro.html__02-chapter2.html__appendix-A.html__appendix-B.html__';
+                return 'index.html__01-intro.html__02-pandocSyntax.html__appendix-A.html__appendix-B.html__';
             };
         </script>
 
