--- a/appendix-A.html
+++ b/appendix-A.html
@@ -315,7 +315,7 @@ table.linguistic-example td {
     })
 
     function get_files() {
-        return 'index.html__01-intro.html__02-chapter2.html__appendix-A.html__appendix-B.html__';
+        return 'index.html__01-intro.html__02-pandocSyntax.html__appendix-A.html__appendix-B.html__';
     };
 </script>
 
