deploy: 16abcf6aa180442699c73e70ac732c438bb59951

--- a/01-intro.html
+++ b/01-intro.html
@@ -388,7 +388,7 @@ table.linguistic-example td {
         },
         computed: {
             currFile() {
-                let ch = window.location.href.split("/");
+                let ch = window.location.href.replace(window.location.hash, "").split("/");
                 return ch[ch.length - 1]
             },
             currIndex() {
