--- a/02-pandocSyntax.html
+++ b/02-pandocSyntax.html
@@ -570,7 +570,7 @@ Stanford, J. N. (2008). Child dialect acquisition: <span>New</span> perspectives
         },
         computed: {
             currFile() {
-                let ch = window.location.href.split("/");
+                let ch = window.location.href.replace(window.location.hash, "").split("/");
                 return ch[ch.length - 1]
             },
             currIndex() {
