--- a/appendix-B.html
+++ b/appendix-B.html
@@ -278,7 +278,7 @@ table.linguistic-example td {
         },
         computed: {
             currFile() {
-                let ch = window.location.href.split("/");
+                let ch = window.location.href.replace(window.location.hash, "").split("/");
                 return ch[ch.length - 1]
             },
             currIndex() {
