--- a/deps/style.html
+++ b/deps/style.html
@@ -67,9 +67,9 @@ table.linguistic-example td {
 }
 .js-toc {
     position: fixed;
-    right: 1%;
-    top: 1%;
-    margin-top: 2em;
+    right: 0;
+    top: 0;
+    margin-top: 50px;
     margin-right: 1.5em;
     width: 17.5%;
     min-width: 200px;
