--- a/deps/tocChap.html
+++ b/deps/tocChap.html
@@ -14,11 +14,11 @@
         <a v-if="prevIndex != null" :href="files[prevIndex]">
             <button>« {{names[prevIndex]}}</button>
         </a>
-        <button v-else disabled>« {{names[currIndex]}}</button>
+        <button v-else disabled>« Main</button>
         <a v-if="nextIndex != null" :href="files[nextIndex]">
             <button>{{names[nextIndex]}} »</button>
         </a>
-        <button v-else disabled>{{names[currIndex]}} »</button>
+        <button v-else disabled>End »</button>
     </div>
 
 </div>
@@ -27,7 +27,6 @@
 <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
 <!-- production version, optimized for size and speed -->
 <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.3"></script>
 
 <script>
     var app = new Vue({
@@ -40,7 +39,9 @@
         computed: {
             currFile() {
                 let ch = window.location.href.replace(window.location.hash, "").split("/");
-                return ch[ch.length - 1]
+                ch = ch[ch.length - 1]
+                if (ch == "") return "index.html"
+                return ch
             },
             currIndex() {
                 return this.files.indexOf(this.currFile)
@@ -102,7 +103,7 @@
     }
     #tocChap ul {
         position: fixed;
-        top: 1em;
+        top: 50px;
         left: 0;
         margin: 0;
     }
