--- a/appendix-B.html
+++ b/appendix-B.html
@@ -198,6 +198,12 @@ blockquote p {
     text-align: left;
     font-style: italic;
 }
+table:not(.linguistic-example) {
+    display: table;
+    width: 100%;
+    min-width: 370px;
+    margin-bottom: 1.5em;
+}
 table.linguistic-example tbody,
 table.linguistic-example tr,
 table.linguistic-example td {
