--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@
             text-align: left;
             font-style: italic;
         }
+        table:not(.linguistic-example) {
+            display: table;
+            width: 100%;
+            min-width: 370px;
+            margin-bottom: 1.5em;
+        }
         table.linguistic-example tbody,
         table.linguistic-example tr,
         table.linguistic-example td {
