deploy: 6805e9f020b31d6399b348e1975b7db6ba99b8df

--- a/index.html
+++ b/index.html
@@ -212,6 +212,15 @@
         table.linguistic-example td {
             border: 0px solid transparent !important;
         }
+        /* Code block styles */
+        pre.sourceCode {
+            background: rgba(233, 233, 233, 0.685);
+            padding: 0.25em 0.55em;
+            border-radius: 0.2em;
+        }
+        div.listing > p {
+            text-align: center;
+        }
         /* #refs::before {
             display: block;
             content: "References";
