--- a/deps/style.html
+++ b/deps/style.html
@@ -90,24 +90,24 @@ div.listing > p {
 }
 @font-face {
     font-family: "Chinese-Custom";
-    src: local('標楷體'), local('AR PL KaitiM Big5'), local('bkai00mp'), local('BiauKai'), local('Kaiti');
+    src: local("TW-Kai-98_1"), local("教育部標準楷書"), local("kai-pc"), local("CMEXc1"), local("Biaukai"), local("MOEDICT-IOS-KAI"), local("DFKaiShu-SB-Estd-BF"), local("全字庫正楷體"), local("Kaiti TC"), local("楷體-繁"), local('標楷體'), local('Kaiti'), local("文鼎ＰＬ新中楷"), local("cwtext 楷書"), local("HanaMinA"), local("HanaMinB"), local("HAN NOM A"), local("HAN NOM B"), local("Han Kaiti CNS"), local('AR PL KaitiM Big5'), local("cursive");
     font-style: italic;
 }
 @font-face {
     font-family: "Chinese-Custom-sans";
     src: local("PingFang-TC-Regular"), local("PingFang TC regular"), local('NotoSansCJK-Regular'), local('Noto Sans CJK TC Regular');
-    font-weight: bold;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Alegreya', "Chinese-Custom", sans-serif;
     font-weight: bold;
 }
-nav, #tocChap {
+nav, #tocChap, p.date {
     font-family: 'Alegreya', "Chinese-Custom-sans", serif;
 }
-body {
-    font-family: FreeSerif, 'Times New Roman', Libertine, 'PT Serif' "Chinese-Custom", Times, serif;
+body{
+    font-family: FreeSerif, 'Times New Roman', Libertine, 'PT Serif', "Chinese-Custom", Times, serif;
 }
+
 .js-toc {
     position: fixed;
     right: 0;
