deploy: dd3ee4d7f13fb5460b00958892c6c0ae5553c0fd

--- a/index.html
+++ b/index.html
@@ -244,24 +244,24 @@
         }
         @font-face {
             font-family: "Chinese-Custom";
-            src: local('標楷體'), local('AR PL KaitiM Big5'), local('bkai00mp'), local('BiauKai'), local('Kaiti');
+            src: local("TW-Kai-98_1"), local("教育部標準楷書"), local("kai-pc"), local("CMEXc1"), local("Biaukai"), local("MOEDICT-IOS-KAI"), local("DFKaiShu-SB-Estd-BF"), local("全字庫正楷體"), local("Kaiti TC"), local("楷體-繁"), local('標楷體'), local('Kaiti'), local("文鼎ＰＬ新中楷"), local("cwtext 楷書"), local("HanaMinA"), local("HanaMinB"), local("HAN NOM A"), local("HAN NOM B"), local("Han Kaiti CNS"), local('AR PL KaitiM Big5'), local("cursive");
             font-style: italic;
         }
         @font-face {
             font-family: "Chinese-Custom-sans";
             src: local("PingFang-TC-Regular"), local("PingFang TC regular"), local('NotoSansCJK-Regular'), local('Noto Sans CJK TC Regular');
-            font-weight: bold;
         }
         h1, h2, h3, h4, h5, h6 {
             font-family: 'Alegreya', "Chinese-Custom", sans-serif;
             font-weight: bold;
         }
-        nav, #tocChap {
+        nav, #tocChap, p.date {
             font-family: 'Alegreya', "Chinese-Custom-sans", serif;
         }
-        body {
-            font-family: FreeSerif, 'Times New Roman', Libertine, 'PT Serif' "Chinese-Custom", Times, serif;
+        body{
+            font-family: FreeSerif, 'Times New Roman', Libertine, 'PT Serif', "Chinese-Custom", Times, serif;
         }
+
         .js-toc {
             position: fixed;
             right: 0;
@@ -306,7 +306,7 @@
     <p>高性能計算 (High Performance Computing)</p>
     </div>
     <div class="DItem" title="勸學">
-    <p><strong>君子曰</strong>：學不可以已。青，取之於藍，而青於藍；冰，水為之，而寒於水。木直中繩。輮以為輪，其曲中規。雖有槁暴，不覆挺者，輮使之然也。故木受繩則直，金就礪則利，君子博學而日參省乎己，則知明而行無過矣。吾嘗終日而思矣，不如須臾之所學也；吾嘗跂而望矣，不如登高之博見也。登高而招，臂非加長也，而見者遠；順風而呼，聲非加疾也，而聞者彰。假輿馬者，非利足也，而致千裏；假舟楫者，非能水也，而絕江河，君子生非異也，善假於物也。積土成山，風雨興焉；積水成淵，蛟龍生焉；積善成德，而神明自得，聖心備焉。故不積跬步，無以至千裏；不積小流，無以成江海。騏驥一躍，不能十步；駑馬十駕，功在不舍。鍥而舍之，朽木不折；鍥而不舍，金石可鏤。蚓無爪牙之利，筋骨之強，上食埃土，下飲黃泉，用心一也。蟹六跪而二螯，非蛇鱔之穴無可寄托者，用心躁也。— 荀況</p>
+    <p><strong>君子曰</strong>：學<em>不可以</em>已。青，取之於藍，而青於藍；冰，水為之，而寒於水。木直中繩。輮以為輪，其曲中規。雖有槁暴，不覆挺者，輮使之然也。故木受繩則直，金就礪則利，君子博學而日參省乎己，則知明而行無過矣。吾嘗終日而思矣，不如須臾之所學也；吾嘗跂而望矣，不如登高之博見也。登高而招，臂非加長也，而見者遠；順風而呼，聲非加疾也，而聞者彰。假輿馬者，非利足也，而致千裏；假舟楫者，非能水也，而絕江河，君子生非異也，善假於物也。積土成山，風雨興焉；積水成淵，蛟龍生焉；積善成德，而神明自得，聖心備焉。故不積跬步，無以至千裏；不積小流，無以成江海。騏驥一躍，不能十步；駑馬十駕，功在不舍。鍥而舍之，朽木不折；鍥而不舍，金石可鏤。蚓無爪牙之利，筋骨之強，上食埃土，下飲黃泉，用心一也。蟹六跪而二螯，非蛇鱔之穴無可寄托者，用心躁也。— 荀況</p>
     </div>
     </div>
 
