deploy: cd795ba7d9fa08afa7b64eda947d18f52854ad8a

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
     
         
         <h1 id="abstract-en">Abstract</h1>
-    <p>Chapter 1 introduces the template. Tools facilitating writing in Pandoc’s Markdown are also introduced. Instructions about compiling the theis can be found in Chapter 1. Chapter 2 documents important features of Pandoc’s Markdown for academic writing, including citation, cross-referencing, complex table creation, and styling of linguistic examples and interlinear glossing.</p>
+    <p>Chapter 1 introduces the template. Handy tools for authoring with Markdown are also introduced. Instructions about compiling the theis is found in Chapter 1. Chapter 2 documents important features of Pandoc’s Markdown for academic writing, including citation, cross-referencing, complex table creation, and styling of linguistic examples and interlinear glossing.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <div class="keywords">
         <span class="k-title">Keywords: </span>
