deploy: 2923b1f29b8abb83daec4fffbc2ae235d1d030b9

--- a/appendix-A.html
+++ b/appendix-A.html
@@ -291,18 +291,18 @@ body{
     <ul class="external-links">
         <template v-if="github != null">
             <li><a :href="github.overleaf" target="_blank">
-                <img src="https://img.yongfu.name/org/overleaf.svg" style="height:.7em;"> PDF
+                <img src="https://img.yongfu.name/org/overleaf.png" style="height:.7em;"> PDF
             </a></li>
             <li><a :href="github.repo" target="_blank">
-                <img src="https://img.yongfu.name/org/github.svg" style="height:.7em;"> Source
+                <img src="https://img.yongfu.name/org/github.png" style="height:.7em;"> Source
             </a></li>
         </template>
         <template v-else>
             <li><span class="disabled">
-                <img src="https://img.yongfu.name/org/overleaf.svg" style="height:.7em;"> PDF
+                <img src="https://img.yongfu.name/org/overleaf.png" style="height:.7em;"> PDF
             </span></li>
             <li><span class="disabled">
-                <img src="https://img.yongfu.name/org/github.svg" style="height:.7em;"> Source
+                <img src="https://img.yongfu.name/org/github.png" style="height:.7em;"> Source
             </span></li>
         </template>
     </ul>
